			       =================
				BOGOFILTER NEWS
			       =================

$Id$

0.13.7.2 2003-07-02

	* Fixed loop in yyinput() caused by unexpected EOF.

0.13.7.1 2003-06-26

	* Update bogotune to version 0.3
	* Added '-k size' option to bogofilter and bogoutil for
          setting BerkeleyDB's cache size.

	2003-06-25

	* For bogotune change processing of '-t' switch from pass 1 to
          pass 2 so that it supercedes the config file.
	* Man pages now use '\ ' when a non-breaking space is needed,
          instead of 0xA0.

	2003-06-24

	* '-Q' processing no longer requires that spamlist.db be present.

0.13.7	2003-06-20

	* Replaced tuning/tuning.sh with tuning/bogotune (and related files).

0.13.6.3 2003-06-18

	* Minor code rewrites to speed up processing messages, mboxes,
	  and msg-count files.  In particular, tuning/tuning.sh runs
	  are approx 47% faster than before.
	* Fixed several errors in tuning/tuning.sh and reformatted
	  "Top 10 Results" output.
	* Minor changes to bogoutil to support bogotune script.
	* Added newlines to correct usage messages.

0.13.6.2 2003-06-05

	* Don't allow square brackets in tokens.  Do allow dollar
          signs in tokens in msg-count files.
	* Bogolexer now discards first 'From' token to match scoring
          behavior of bogofilter.

0.13.6.1 2003-06-05

	* Updated file tuning/README and script tuning/tuning.sh.

0.13.6	2003-06-04

	* Fix check for "^From " lines to work properly during base64
          decoding. 
	* End html comment processing when a message header is found.
	* Improve README for the tuning scripts and simplify them.

0.13.5	2003-06-03

	* Allow terminal exclamation points on tokens.
	* Updated contrib/mime.get.rfc822

	2003-06-02

	* Fixed bogofilter's non-use of message counts in msg-count files.
	* Diagnose invalid values of robx.
	* Modified rstats_print_histogram() so it doesn't print 'nan's.
	* Modified t.frame to find version of grep on Solaris so
	  t.bulkmode can run successfully.
