@@ -1,4 +1,7 @@
 # $Id$
+# To build with tdb or build a static binary, do
+# rpm -ba|--rebuild --define 'with_tdb 1'
+# rpm -ba|--rebuild --define 'enable_static  1'
 
 
 Name: @PACKAGE@
@@ -12,23 +15,22 @@ Summary: fast anti-spam filtering by Bayesian statistical analysis
 Buildroot: %{_tmppath}/%{name}-%{version}-root
 %define mydocdir %{_docdir}/%{name}
 
-%define enable_static_p 0
-%define with_tdb_p     0
-
-# rpm -ba|--rebuild --define 'with_tdb 1'
-# rpm -ba|--rebuild --define 'enable_static  1'
-
-%{?enable_static:%define enable_static_p 1}
-%{?with_tdb:%define with_tdb_p 1}
+%{!?enable_static:%define enable_static 0}
+%{!?with_tdb:%define with_tdb 0}
 
 %description
 Bogofilter is a Bayesian spam filter.  In its normal mode of
 operation, it takes an email message or other text on standard input,
 does a statistical check against lists of "good" and "bad" words, and
 returns a status code indicating whether or not the message is spam.
-Bogofilter is designed with fast algorithms (including Berkeley DB system),
+Bogofilter is designed with fast algorithms,
 coded directly in C, and tuned for speed, so it can be used for production
 by sites that process a lot of mail.
+%if %{with_tdb}
+This version was built with tdb support.
+%else
+This version was built with Berkeley DB support.
+%endif
 
 %prep
 %setup
@@ -36,10 +38,10 @@ CFLAGS="$RPM_OPT_FLAGS" \
 ./configure \
   --prefix=%{_prefix} \
   --mandir=%{_mandir} \
-%if %{enable_static_p}
-  --enable-static --program-suffix=_static \
+%if %{?enable_static}
+  --enable-static --program-suffix=-static \
 %endif
-%if %{with_tdb_p}
+%if %{with_tdb}
   --with-tdb \
 %endif
   --sysconfdir=%{_sysconfdir}
