@@ -4,6 +4,9 @@
 
 $Id$
 
+version  date
+        * Added tdb (trivial database) support.
+
 0.13.7.2 2003-07-02
 
 	* Fixed loop in yyinput() caused by unexpected EOF.
